Global var, Player Enterprise item ID
Added manual Global Variable behaviour editing,
Player's enterprise item ID is now translated correctly.

--- a/SaveGameStructure.cfg
+++ b/SaveGameStructure.cfg
@@ -1,4 +1,5 @@
 //this is simply copy/paste of the savegame structure from the wiki : http://mbmodwiki.ollclan.eu/Savegame
+//With a new column, describing conversion behaviour.
 Type 	Count 	Field 	Condition 	Info 	SGoverride
 header 	1 	header 			REPLACE
 uint64 	1 	game_time 			REPLACE
@@ -41,7 +42,7 @@ int32 	1 	rest_is_interactive 			REPLACE
 int32 	1 	rest_remain_attackable 			REPLACE
 string 	9 	class_names 			DONTREPLACE
 int32 	1 	num_global_variables 			DONTREPLACE
-int64 	num_global_variables 	global_variables 			DONTREPLACE
+int64 	num_global_variables 	global_variables 			REPLACE
 int32 	1 	num_triggers 			DONTREPLACE
 trigger 	num_triggers 	triggers 			DONTREPLACE
 int32 	1 	num_simple_triggers 			DONTREPLACE
@@ -237,7 +238,7 @@ int64 	num_slots 	slots 			REPLACE
 int32 	4 	attributes 			REPLACE
 float 	7 	proficiencies 			REPLACE
 uint32 	6 	skills 			REPLACE
-note 	16 	notes 			REPLACE
+note 	16 	notes 			DONTREPLACE
 uint64 	1 	flags 			DONTREPLACE
 int32 	1 	site_id_and_entry_no 			REPLACE
 int32 	1 	skill_points 			REPLACE
