--- a/SlotsNames.cfg
+++ b/SlotsNames.cfg
@@ -1,4 +1,30 @@
 ########################################################
+#		MnB SaveGameEditor Notes
+#This file came from MnB Warband's Native Module System :
+#
+#		"module_constants.py"
+#
+#This file helps to give names to slots. (Which are extra
+#variables used for scripting).
+#It also give a behaviour about wether the slot should
+#be translated to another mod version and how.
+#Module which use modified version of this file may have
+#some trouble for conversion.
+#Modders are welcome to edit their "module_constants.py"
+#this way, and share it. To allow
+#conversion for their mods.
+#You can also send me a copy of your "module_constants.py"
+#via http://forums.taleworlds.com/ and I can take care of
+#this. If i can easily figure out what the variables
+#refer to.
+#
+#Kushulain.
+#
+########################################################
+
+
+
+########################################################
 ##  ITEM SLOTS             #############################
 ########################################################
 
@@ -387,7 +413,7 @@ REPLACE slot_center_has_prisoner_tower   = 135 #town, castle
 #walled_center_improvements_begin = slot_center_has_messenger_post
 REPLACE slot_center_improvements_end               = 136
 
-REPLACE slot_center_player_enterprise     				  = 137 #noted with the item produced
+REPLACE_BY_ITEM_ID slot_center_player_enterprise     				  = 137 #noted with the item produced
 REPLACE slot_center_player_enterprise_production_order    = 138
 REPLACE slot_center_player_enterprise_consumption_order   = 139 #not used
 REPLACE slot_center_player_enterprise_days_until_complete = 139 #Used instead
